pdf: Annotation undo/redo should not be always active
Bug: 943918
Change-Id: I5aa20b0a3ae5c7fd416531ef6007775d7aae8fef
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1531882
Auto-Submit: dstockwell <dstockwell@chromium.org>
Reviewed-by: dsinclair <dsinclair@chromium.org>
Commit-Queue: dstockwell <dstockwell@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#643740}(cherry picked from commit dfd2cc136dc0a285769dc7ed8f0dc4d3c8697190 [formerly 9efdf272ee0e679739f28853933a84158c6b0b19])
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1557656
Reviewed-by: dstockwell <dstockwell@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#697}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: fca369c5fc0f463be62d9ce54c185c2f478834de

--- a/chrome/browser/resources/pdf/elements/viewer-pdf-toolbar/viewer-pdf-toolbar.html
+++ b/chrome/browser/resources/pdf/elements/viewer-pdf-toolbar/viewer-pdf-toolbar.html
@@ -291,6 +291,7 @@
       <div id="annotation-separator"></div>
 
       <paper-icon-button id="undo"
+          disabled="[[!canUndoAnnotation]]"
           icon="pdf:undo"
           on-click="undo"
           aria-label$="{{strings.annotationUndo}}"
@@ -298,6 +299,7 @@
       </paper-icon-button>
 
       <paper-icon-button id="redo"
+          disabled="[[!canRedoAnnotation]]"
           icon="pdf:redo"
           on-click="redo"
           aria-label$="{{strings.annotationRedo}}"
