[CrOS MultiDevice] Add more polish to setup dialog on small screens.
At the request of elizabethchiu@, I added the following tweaks:
(1) Add a shadow over the button bar when contents are not scrolled to
    the bottom. When scrolled to the bottom, the shadow should
    disappear.
(2) Adjust the padding around the buttons of the bar.
(3) Adjust the spacing between feature descriptions.

Large, OOBE: https://screenshot.googleplex.com/0eGWJaoLzO7.png
Large, dialog: https://screenshot.googleplex.com/3ad6ACZE2Y4.png
Small, portrait, dialog: https://screenshot.googleplex.com/ddHZoBNbgET.png
Small, portrait, OOBE: https://screenshot.googleplex.com/W6p1DpAazn7.png
Small, landscape, dialog: https://screenshot.googleplex.com/UxhkoJSVGvD.png
Small, landscape, OOBE: https://screenshot.googleplex.com/E6XQoWUS16f.png

TBR=hansberry@chromium.org
(cherry picked from commit bfc8e2a6ec4b7669480449d8cb03da4a7492ec98 [formerly 38a95765c6b9e5c345ce5e43d2ec87b77ffbb5f4])

Bug: 1012295
Change-Id: I5efe600a183f4340834b4da9b5a8cad6befbfaf0
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1965976
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Reviewed-by: Ryan Hansberry <hansberry@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#724475}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1972616
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/branch-heads/3987@{#244}
Cr-Branched-From: f8ec429d946866f630bf422440e162a16c8b97d1 [formerly c4e8da9871cc266be74481e212f3a5252972509d]-refs/heads/master@{#722274}

Former-commit-id: 71188f5912e0ee9f935a748648dba704ddae44dd

--- a/chrome/browser/resources/chromeos/multidevice_setup/multidevice_setup_dialog.html
+++ b/chrome/browser/resources/chromeos/multidevice_setup/multidevice_setup_dialog.html
@@ -13,9 +13,6 @@
       overflow: hidden;
       width: 100%;
     }
-    #main-element {
-      overflow: scroll;
-    }
   </style>
 </head>
 <body>
@@ -24,6 +21,6 @@
   <link rel="import" href="chrome://resources/html/util.html">
   <link rel="import" href="i18n_setup.html">
   <link rel="import" href="multidevice_setup_post_oobe.html">
-  <multidevice-setup-post-oobe id="main-element"></multidevice-setup-post-oobe>
+  <multidevice-setup-post-oobe></multidevice-setup-post-oobe>
 </body>
 </html>
