Remove XHR benchmark handler and the related examples.
Remove XHR benchmark handler suuport from standalone.py.
Also remove fetch benchmark related examples.

Change-Id: I6503f1c9af96287bed6bbe0824ac5cf73a7b6201

--- a/example/benchmark.html
+++ b/example/benchmark.html
@@ -99,7 +99,7 @@ function init() {
     addToLog('WebSocket is not available');
   }
 
-  initWorker('WebSocket', '');
+  initWorker('');
 }
 </script>
 </head>
